# AnywhereVLA

./: .gitignore  README.md
.github/workflows/: AnywhereVLA.html  static.yml
configs/rviz_config/: main_visualization.rviz
scripts/: README.md  build.sh  run.sh
src/cpu_part/: README.md  docker-compose.yaml
src/cpu_part/hermesbot-active-exploration/: docker-compose.yml
src/cpu_part/hermesbot-approaching/: README.md  docker-compose.yml
src/cpu_part/hermesbot-entrypoint/: README.md
src/cpu_part/hermesbot-nav2/: README.md  docker-compose.yml
src/cpu_part/hermesbot-octomap/: .gitignore  README.md  docker-compose.yml
src/cpu_part/hermesbot-semantic-map/: .gitignore  docker-compose.yml
src/cpu_part/hermesbot-semantic-map/src/semantic_map/semantic_map/: package.xml  setup.py
src/cpu_part/hermesbot-semantic-map/src/semantic_map/semantic_map/semantic_map/: semantic_map_3d.py
src/cpu_part/hermesbot-semantic-map/src/semantic_map/semantic_map/semantic_map/common/: common_utils.py  densifyer.py  profiller.py  projection.py  semantic.py  voxelization.py
src/cpu_part/hermesbot-semantic-map/src/semantic_map/semantic_map_bringup/: CMakeLists.txt  package.xml
src/cpu_part/hermesbot-semantic-map/src/semantic_map/semantic_map_bringup/launch/: semantic_map.launch.py
src/cpu_part/hermesbot-slam/: README.md  docker-compose.yml
src/gpu_part/: README.md
src/gpu_part/hermesbot-smolvla/: .gitignore  README.md  docker-compose.yml
src/gpu_part/hermesbot-yolo/: .gitignore  Makefile  README.md  docker-compose.yml
src/gpu_part/hermesbot-yolo/src/object_detection/yolo_bringup/: CMakeLists.txt  package.xml
src/gpu_part/hermesbot-yolo/src/object_detection/yolo_bringup/config/: rviz_cfg.rviz  yolo_params.yaml
src/gpu_part/hermesbot-yolo/src/object_detection/yolo_bringup/launch/: yolo.launch.py
src/hardwere_part/: Makefile  README.md  Readme_structure.md  docker-compose.yaml
src/hardwere_part/gamepad/: Dockerfile
src/hardwere_part/motors/: Dockerfile
(+116 files in other folders)
