<?xml version="1.0"?>
<package format="3">
  <name>semantic_map</name>
  <version>0.0.1</version>
  <description>Semantic Map that combines the SLAM and object detection nodes</description>

  <maintainer email="artem_voronov@skoltech.com">Artem Voronov</maintainer>
  <license>Apache-2.0</license>

  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
