<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_map_bringup</name>
  <version>4.2.0</version>
  <description>semantic_map for SLAM</description>
  <maintainer email="artem_voronov@skoltech.com">Artem Voronov</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>semantic_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
