<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_bringup</name>
  <version>4.2.0</version>
  <description>YOLO for ROS 2</description>

  <maintainer email="artem.voronov@skoltech.ru">Artem Voronov</maintainer>
  <author email="mgons@unileon.es">Miguel Ángel González Santamarta</author>

  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>yolo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
